--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -195,6 +195,9 @@ I also find that, were the mortgage interest-rate deduction to be eliminated,
  5%, which results in a 1% increase in home ownership.
  In a new steady state the elimination of the deduction is equivalent to
  an increase of 2.4% of lifecycle consumption.
+\change_inserted 143970970 1473167594
+I also find that the elasticity of labor supply with respect to region-level
+ income shocks is 1.19, larger than in previous studies.
 \change_unchanged
 
 \end_layout
@@ -475,8 +478,13 @@ Migration is a low probability event in both data and model.
  Conditioning on age when computing expected utility reveals that the cost
  of not being able to move is largest for younger individuals, and it gradually
  fades out as agents grow older.
-\change_inserted 143970970 1465396696
 
+\change_inserted 143970970 1473169129
+ Finally, this paper provides new estimates for the elasticity of labor
+ supply with respect to a region-level income shock.
+ The estimates vary significantly for renters and owners, the elasticity
+ is 1.5 for renters and 0.18 for owners.
+ 
 \end_layout
 
 \begin_layout Standard
@@ -5980,6 +5988,13 @@ Labor Supply Elasticity
 \begin_layout Standard
 In this section I illustrate how the model reacts to large economic shocks
  at the regional level.
+
+\change_inserted 143970970 1473166468
+ The overall aim is to provide an estimate for the elasticity of labor supply
+ when individuals have the choice between renting and owning, and regional
+ prices are risky.
+ 
+\change_deleted 143970970 1473156527
  The presentation focuses on changes in migratory in and outflows to and
  from a region, when the regional price or income level is reduced unexpectedly
  at a certain point in time.
@@ -5996,17 +6011,60 @@ The regional shock consists of reducing the level of the observed mean income
 \begin_inset Formula $d=8$
 \end_inset
 
-).
- The experiment is conducted under the assumption that agents did not foresee
+)
+\change_inserted 143970970 1473156510
+.
+ Regional income and house price shocks are correlated, and I measure this
+ correlation with an estimate of 
+\begin_inset Formula $\Omega_{d}$
+\end_inset
+
+ obtained in 
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "eq:VAR-process-1"
+
+\end_inset
+
+.
+ This correlation translates the income shock into a -6% shock for house
+ prices.
+\change_deleted 143970970 1473156197
+.
+
+\change_unchanged
+ 
+\change_inserted 143970970 1473156523
+
+\end_layout
+
+\begin_layout Standard
+Th
+\change_inserted 143970970 1473156516
+e
+\change_deleted 143970970 1473155946
+e
+\change_unchanged
+ experiment is conducted under the assumption that agents did not foresee
  the shock and therefore are surprised in the year 2000 to find that the
- mapping form aggregate factors 
+ mapping f
+\change_deleted 143970970 1473166505
+o
+\change_inserted 143970970 1473166506
+o
+\change_unchanged
+rm aggregate factors 
 \begin_inset Formula $\left(Q,P\right)$
 \end_inset
 
  into 
+\change_deleted 143970970 1473155959
+
 \begin_inset Formula $ $
 \end_inset
 
+
+\change_unchanged
 
 \begin_inset Formula $\left(q_{8},p_{8}\right)$
 \end_inset
@@ -6070,9 +6128,20 @@ status collapsed
 
 \end_inset
 
- Notice that none of the time series properties of the regional price series
- other than the level are changed.
- In particular, the growth rate and implied variance remain the same.
+ Notice that
+\change_inserted 143970970 1473156019
+ this is a pure level shift, i.e.
+
+\change_unchanged
+ 
+\change_deleted 143970970 1473156000
+none of the time series properties of the regional price series other than
+ the level are changed.
+ In particular, 
+\change_unchanged
+the growth rate and implied variance remain the same.
+
+\change_deleted 143970970 1473166550
  The other regional series (house price in this instance) is held constant
  in each experiment, as well as both series in all other regions.
  Illustrations of the shocked price and income series are shown in figures
@@ -6091,13 +6160,117 @@ reference "fig:Shocked-income-series"
 \end_inset
 
 , respectively.
+\change_inserted 143970970 1473156552
+
+\end_layout
+
+\begin_layout Standard
+
+\change_inserted 143970970 1473162557
+Figure 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:ypshock-experiment"
+
+\end_inset
+
+ illustrates the experiment.
+ Starting with the bottom 2 panels, we see how the shock is implemented.
+ A 10% drop in regional labor income is accompanied by a 6% reduction in
+ the level of house prices.
+ It is a priori unclear what aggregate response in mobility to expect from
+ such a shock: in the end, renters benefit from lower house prices, both
+ because of smaller expenses and because of a relaxation of their downpayment
+ constraint.
+ Hence, for renters WNC might become more rather than less attractive after
+ the shock.
+ In terms of cash on hand, the result is going to depend on the expenditure
+ share of housing in household income.
+ Also, renters and owners have different mobility costs, and they may value
+ differently changes to prices and how those affect their future wealth.
+ 
+\end_layout
+
+\begin_layout Standard
+
+\change_inserted 143970970 1473166031
+Under the current parameterization of the model, the reduction in labor
+ income has a larger effect than the cheaper price of rent, resulting in
+ an overall increase in outflows from the region, as can be seen in the
+ first panel of figure 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:ypshock-experiment"
+
+\end_inset
+
+, which shifts outflows up by 0.2 percentage points on average.
+ It is interesting to contrast this result to the elasticity obtained in
+ 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "kennan2003effect"
+
+\end_inset
+
+, where a similar 10% shock is applied to income in a region, resulting
+ in an overall elasticity of 0.5.
+ I find in the present model an overall elasticity of 1.19, which is conditionall
+y 1.53 for renters, and 0.18 for owners.
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+
+\change_inserted 143970970 1473167419
+It is important to note that this comparison is not ideal.
+ There is a conceptual difference, and a practical one.
+ Conceptually, 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "kennan2003effect"
+
+\end_inset
+
+ iterate on the model-implied transition matrix of moves to generate a new
+ steady state equilibium; Instead, I alter the observed series of regional
+ prices in the described fashion and resimulate the model once.
+ Both exercises measure changes between 2 equilibria, but my model takes
+ prices and incomes as given from the data, i.e.
+ they are not sampled from a stationary random process as in 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "kennan2003effect"
+
+\end_inset
+
+.
+ As a practical matter, I take the average over changes 
+\emph on
+in each period
+\emph default
+, while they focus on the new equilibrium after convergence (roughly 15
+ years).
+\change_unchanged
+
+\end_layout
+
+\end_inset
+
+
+\change_unchanged
+
 \end_layout
 
 \begin_layout Paragraph
+
+\change_deleted 143970970 1473166327
 Shock to average labor productivity.
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473166327
 Reducing mean labor productivity 
 \begin_inset Formula $q$
 \end_inset
@@ -6126,10 +6299,12 @@ reference "fig:yshock-outflow"
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473166327
 Looking at the opposite flow of migration, figure 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "fig:yshock-inflows"
+reference "fig:ypshock-experiment"
 
 \end_inset
 
@@ -6147,13 +6322,19 @@ reference "fig:yshock-inflows"
  to be looked at together with the corresponding ouflows at the time.
  Over the period 1998–2012, WNC experiences average annual population growth
  of 1.08% in the baseline model.
+\change_unchanged
+
 \end_layout
 
 \begin_layout Paragraph
+
+\change_deleted 143970970 1473166333
 Shock to house prices.
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473166333
 The pictures in figures 
 \begin_inset CommandInset ref
 LatexCommand ref
@@ -6199,12 +6380,16 @@ key "notowidigdo2011incidence"
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473166333
 Turning finally to the effects of a reduction in house prices on inflows
  to WNC, we see in both panels that lower prices attract slightly more owners,
  and significantly more renters, particularly as aggregate prices rise and
  therefore the cost of living in other regions increases disproportionately
  for renters.
  Both owners and renters move to the region to enjoy cheaper housing.
+\change_unchanged
+
 \end_layout
 
 \begin_layout Standard
@@ -6686,6 +6871,8 @@ key "sommer2013implications"
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473161045
 \begin_inset Float table
 wide false
 sideways false
@@ -6740,9 +6927,13 @@ name "tab:Abolishing-the-mortgage"
 \end_inset
 
 
+\change_unchanged
+
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473161040
 \begin_inset Note Note
 status collapsed
 
@@ -6750,7 +6941,7 @@ status collapsed
 \begin_inset Float table
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \begin_inset Caption Standard
@@ -6772,9 +6963,13 @@ mortgage deduction
 \end_inset
 
 
+\change_unchanged
+
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473161033
 \begin_inset Float figure
 placement p
 wide false
@@ -6833,6 +7028,8 @@ name "fig:Shocked-price-series."
 \end_layout
 
 \begin_layout Standard
+
+\change_deleted 143970970 1473161033
 \begin_inset Float figure
 placement p
 wide false
@@ -6882,6 +7079,8 @@ name "fig:Shocked-income-series"
 \end_inset
 
 
+\change_unchanged
+
 \end_layout
 
 \begin_layout Standard
@@ -6889,7 +7088,7 @@ name "fig:Shocked-income-series"
 placement p
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \noindent
@@ -6943,7 +7142,8 @@ status open
 \noindent
 \align center
 \begin_inset Graphics
-	filename ../../../Dropbox/research/mobility/output/model/experiments/exp_yp/yshock8_in.pdf
+	filename /Users/florian.oswald/Dropbox/research/mobility/output/model/data_repo/out_graphs_jl/outflow.pdf
+	scale 80
 
 \end_inset
 
@@ -6954,11 +7154,23 @@ status open
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
+
+\change_inserted 143970970 1473156810
+Changes in outflows from WNC after a 10% shock is applied to average income
+ in the region.
+ The top panel shows the proportion of the population that is leaving in
+ each period in both baseline and shock scenario.
+ The bottom two panels illustrate how the regional price and income series
+ are changed in the course of the experiment.
+ 
+\change_deleted 143970970 1473156676
 Changes in inflow patterns to WNC after the mean productivity level is permanent
-ly reduced by 10% in 2000.
+ly reduced by 10% in 2000
+\change_unchanged
+.
 \begin_inset CommandInset label
 LatexCommand label
-name "fig:yshock-inflows"
+name "fig:ypshock-experiment"
 
 \end_inset
 
